apps/authentik/post-install/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: authentik
spec:
  ingressClassName: traefik-external
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      middlewares:
        - name: default-headers
          namespace: traefik
      match: Host(`auth.local.asztalos.net`)
      priority: 10
      services:
        - name: authentik-server
          namespace: authentik
          port: 80
  tls:
    secretName: local-asztalos-net-tls
